fix: set optimal paddings and sizes for content cards on mobile

--- a/src/styles/mobile.scss
+++ b/src/styles/mobile.scss
@@ -121,9 +121,10 @@
             &-content {
                 height: 200px;
                 padding: 15px;
+                gap: 6px;
                 &-title {
                     font-size: 22px;
-                    line-height: 1;
+                    line-height: 1.1;
                 }
                 &-time,
                 &-type {
